--- a/client/package.json
+++ b/client/package.json
@@ -45,5 +45,6 @@
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "@types/react-router-dom": "^5.1.6"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
