--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "start": "node dist/server.js",
-    "start:watch": "ts-node-dev --respawn --transpile-only src/server.ts"
+    "start:watch": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "heroku": "^7.47.6",
     "mongoose": "^5.10.11"
   },
   "devDependencies": {
