--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "start:watch": "ts-node-dev --respawn --transpile-only src/server.ts",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
+  "engines": {
+    "node": "14.4.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "heroku": "^7.47.6",
