--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@types/express": "^4.17.8",
     "@types/mongoose": "^5.7.37",
     "@types/node": "^14.14.6",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/recharts": "^1.8.18",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "eslint": "^7.13.0",
