--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "engines": {
-    "node": "14.4.0"
+    "node": "14.4.0",
+    "npm": "6.14.5"
   },
   "author": "",
   "license": "ISC",
