--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,16 @@
 {
-  "name": "pokedex-react-mui-ts",
-  "version": "1.0.0",
+  "name": "weldev-project-react-mui-ts-bp",
+  "version": "2.0.0",
   "description": "React TypeScript Material-UI boilerplate by Welcome, Developer.",
+  "author": {
+    "name": "Dan Castro",
+    "url": "https://www.welcomedeveloper.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/danilocastronz/weldev-project-react-mui-ts-bp",
+    "directory": "weldev-project-react-mui-ts-bp"
+  },
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
@@ -27,7 +36,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "recharts": "^2.1.8",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -63,7 +73,6 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.3.2",
-    "web-vitals": "^2.1.2"
+    "prettier": "^2.3.2"
   }
 }
