fixes on damageGen

--- a/client/package.json
+++ b/client/package.json
@@ -1,16 +1,7 @@
 {
-  "name": "weldev-project-react-mui-ts-bp",
+  "name": "client",
   "version": "2.0.0",
   "description": "React TypeScript Material-UI boilerplate by Welcome, Developer.",
-  "author": {
-    "name": "Dan Castro",
-    "url": "https://www.welcomedeveloper.com"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/danilocastronz/weldev-project-react-mui-ts-bp",
-    "directory": "weldev-project-react-mui-ts-bp"
-  },
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
