--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "hamburger-react": "^2.4.1",
     "react": "^17.0.1",
+    "react-animations": "^1.0.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
@@ -58,6 +59,7 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.6",
     "@typescript-eslint/parser": "^4.31.2",
+    "@types/react-animations": "^1.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
